@@ -31,6 +31,11 @@ tasks.withType(JavaCompile) {
     targetCompatibility = "1.7"
 }
 
+test {
+    if (project.hasProperty('maxParallelForks'))
+        maxParallelForks = project.maxParallelForks as int
+}
+
 idea {
     project {
         languageLevel = 'JDK_1_7'
