@@ -21,28 +21,15 @@
 
 package io.crate.testing;
 
-import io.crate.testing.download.DownloadSource;
-import io.crate.testing.download.DownloadSources;
-import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
-import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
-import org.apache.commons.compress.compressors.gzip.GzipCompressorInputStream;
 import org.junit.rules.ExternalResource;
 
-import java.io.BufferedInputStream;
-import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.InetAddress;
-import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -53,25 +40,15 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
-import static org.junit.Assert.assertFalse;
-
 public class CrateTestServer extends ExternalResource {
-
-    private static final String TMP_DIR = System.getProperty("java.io.tmpdir");
-    private static final File CRATE_TMP_DIR = new File(TMP_DIR, "crate.testing");
-
-    public static final File TMP_CACHE_DIR = new File(CRATE_TMP_DIR, "downloads");
-    public static final File TMP_WORKING_DIR = new File(CRATE_TMP_DIR, "working");
 
     private final int httpPort;
     private final int transportPort;
+    private final Path workingDir;
     private final String crateHost;
-    private final String workingDir;
     private final String clusterName;
     private final String[] unicastHosts;
-    private final DownloadSource downloadSource;
     private final Map<String, Object> nodeSettings;
-    private final boolean keepWorkingDir;
 
     private ExecutorService executor;
     private Process crateProcess;
@@ -80,26 +57,12 @@ public class CrateTestServer extends ExternalResource {
         private String host = InetAddress.getLoopbackAddress().getHostAddress();
         private int httpPort = Utils.randomAvailablePort();
         private int transportPort = Utils.randomAvailablePort();
-        private String workingDir = TMP_WORKING_DIR.toString();
+        private Path workingDir = CrateTestCluster.TMP_WORKING_DIR;
         private String clusterName = "Testing-" + transportPort;
         private List<String> unicastHosts = new ArrayList<>();
-        private DownloadSource downloadSource = null;
         private Map<String, Object> nodeSettings = Collections.emptyMap();
-        private boolean keepWorkingDir = false;
 
         Builder() {
-        }
-
-        public static Builder fromURL(String url) {
-            return new Builder().fromDownloadSource(DownloadSources.URL(url));
-        }
-
-        public static Builder fromVersion(String crateVersion) {
-            return new Builder().fromDownloadSource(DownloadSources.VERSION(crateVersion));
-        }
-
-        public static Builder fromFile(String pathToTarGzCrateDistribution) {
-            return new Builder().fromDownloadSource(DownloadSources.FILE(pathToTarGzCrateDistribution));
         }
 
         public Builder host(String host) {
@@ -117,7 +80,7 @@ public class CrateTestServer extends ExternalResource {
             return this;
         }
 
-        public Builder workingDir(String workingDir) {
+        public Builder workingDir(Path workingDir) {
             this.workingDir = workingDir;
             return this;
         }
@@ -132,27 +95,14 @@ public class CrateTestServer extends ExternalResource {
             return this;
         }
 
-        Builder fromDownloadSource(DownloadSource downloadSource) {
-            this.downloadSource = downloadSource;
-            return this;
-        }
-
         public Builder settings(Map<String, Object> nodeSettings) {
             this.nodeSettings = nodeSettings;
             return this;
         }
 
-        public Builder keepWorkingDir(boolean keepWorkingDir) {
-            this.keepWorkingDir = keepWorkingDir;
-            return this;
-        }
-
         public CrateTestServer build() {
-            if (downloadSource == null) {
-                throw new IllegalArgumentException("no download source given (version, git-ref, url, file)");
-            }
-            return new CrateTestServer(clusterName, downloadSource, httpPort, transportPort, workingDir,
-                    host, nodeSettings, keepWorkingDir, unicastHosts.toArray(new String[unicastHosts.size()]));
+            return new CrateTestServer(clusterName, httpPort, transportPort, workingDir, host,
+                    nodeSettings, unicastHosts.toArray(new String[unicastHosts.size()]));
         }
     }
 
@@ -173,105 +123,23 @@ public class CrateTestServer extends ExternalResource {
     }
 
     private CrateTestServer(String clusterName,
-                            DownloadSource downloadSource,
                             int httpPort,
                             int transportPort,
-                            String workingDir,
+                            Path workingDir,
                             String host,
                             Map<String, Object> settings,
-                            boolean keepCrateDir,
                             String... unicastHosts) {
         this.clusterName = Utils.firstNonNull(clusterName, "Testing-" + transportPort);
-        this.downloadSource = downloadSource;
         this.crateHost = host;
         this.httpPort = httpPort;
         this.transportPort = transportPort;
         this.unicastHosts = unicastHosts;
         this.workingDir = workingDir;
         this.nodeSettings = settings == null ? Collections.<String, Object>emptyMap() : settings;
-        this.keepWorkingDir = keepCrateDir;
-    }
-
-    private static void uncompressTarGZ(File tarFile, File dest) throws IOException {
-        TarArchiveInputStream tarIn = new TarArchiveInputStream(
-                new GzipCompressorInputStream(
-                        new BufferedInputStream(
-                                new FileInputStream(
-                                        tarFile
-                                )
-                        )
-                )
-        );
-
-        TarArchiveEntry tarEntry = tarIn.getNextTarEntry();
-        // tarIn is a TarArchiveInputStream
-        while (tarEntry != null) {
-            Path entryPath = Paths.get(tarEntry.getName());
-
-            if (entryPath.getNameCount() == 1) {
-                tarEntry = tarIn.getNextTarEntry();
-                continue;
-            }
-
-            Path strippedPath = entryPath.subpath(1, entryPath.getNameCount());
-            File destPath = new File(dest, strippedPath.toString());
-
-            if (tarEntry.isDirectory()) {
-                destPath.mkdirs();
-            } else {
-                destPath.createNewFile();
-                byte[] btoRead = new byte[1024];
-                BufferedOutputStream bout =
-                        new BufferedOutputStream(new FileOutputStream(destPath));
-                int len;
-                while ((len = tarIn.read(btoRead)) != -1) {
-                    bout.write(btoRead, 0, len);
-                }
-
-                bout.close();
-                if (destPath.getParent().equals(dest.getPath() + "/bin")) {
-                    destPath.setExecutable(true);
-                }
-            }
-            tarEntry = tarIn.getNextTarEntry();
-        }
-        tarIn.close();
-    }
-
-    private void downloadCrate() throws IOException {
-        TMP_CACHE_DIR.mkdirs();
-        TMP_WORKING_DIR.mkdirs();
-
-        File crateTmpFile = new File(TMP_CACHE_DIR, fileNameFromDownloadSource(downloadSource));
-        File crateDir = crateWorkingDir();
-
-        if (crateTmpFile.exists()) {
-            Utils.log("No need to download crate. already downloaded %s to %s", downloadSource, crateTmpFile);
-            if (!crateDir.exists()) {
-                uncompressTarGZ(crateTmpFile, crateDir);
-            }
-        } else {
-            crateTmpFile.createNewFile();
-            Utils.log("Downloading Crate %s to: %s", downloadSource, crateTmpFile);
-            try (InputStream in = downloadSource.downloadUrl().openStream()) {
-                Files.copy(in, crateTmpFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-                uncompressTarGZ(crateTmpFile, crateDir);
-            }
-        }
-    }
-
-    public File crateWorkingDir() {
-        return downloadSource.folder(new File(workingDir));
-    }
-
-    private static String fileNameFromDownloadSource(DownloadSource downloadSource) throws MalformedURLException {
-        String filePath = downloadSource.downloadUrl().getFile();
-        return filePath.substring(filePath.lastIndexOf("/") + 1);
     }
 
     @Override
     protected void before() throws Throwable {
-        downloadCrate();
         Utils.log("Starting crate server process...");
         executor = Executors.newFixedThreadPool(2); // new threadpool for new process instance
         startCrateAsDaemon();
@@ -284,7 +152,6 @@ public class CrateTestServer extends ExternalResource {
             try {
                 crateProcess.destroy();
                 crateProcess.waitFor();
-                removeServerDir();
             } catch (Exception e) {
                 e.printStackTrace();
             }
@@ -325,8 +192,8 @@ public class CrateTestServer extends ExternalResource {
         ProcessBuilder processBuilder = new ProcessBuilder(
                 command
         );
-        assert new File(workingDir).exists();
-        processBuilder.directory(crateWorkingDir());
+        assert Files.exists(workingDir);
+        processBuilder.directory(workingDir.toFile());
         processBuilder.redirectErrorStream(true);
         crateProcess = processBuilder.start();
 
@@ -373,11 +240,4 @@ public class CrateTestServer extends ExternalResource {
         });
     }
 
-    private void removeServerDir() throws Exception {
-        File crateDir = crateWorkingDir();
-        if (crateDir.exists() && !keepWorkingDir) {
-            Utils.deletePath(crateDir.toPath());
-            assertFalse(crateDir.exists());
-        }
-    }
 }
