@@ -5,6 +5,8 @@ Changes for Crate-Java-Testing
 Unreleased
 ==========
 
+ * testing framework use an unique directory for each test cluster.
+
 2016/02/19 0.4.0
 ================
 
